Bug 1497990 Part 1 - Use mIsBalancing instead of comparison between mBalanceColCount with INT32_MAX. r=dbaron

Differential Revision: https://phabricator.services.mozilla.com/D8782